# marketing-persona-counsel

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/marketing_persona_counsel/: __init__.py  cli.py  ingestion.py  models.py  orchestrator.py  persistence.py
tests/: test_basic.py  test_cli.py
