[project]
name = "marketing-persona-counsel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jamal Hansen", email = "jamal.hansen@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer",
    "pydantic-ai",
    "pydantic",
    "rich",
    "httpx",
    "beautifulsoup4",
    "markdown",
    "local-first-common",
    "sqlmodel",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
    "ruff",
]

[tool.uv.sources]
local-first-common = { git = "https://github.com/jamalhansen/local-first-common.git", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketing_persona_counsel"]

[project.scripts]
marketing-persona-counsel = "marketing_persona_counsel.cli:app"
